--- a/SinExWebApp20256461/Views/BusinessShippingAccounts/_BusinessInformationPartial.cshtml
+++ b/SinExWebApp20256461/Views/BusinessShippingAccounts/_BusinessInformationPartial.cshtml
@@ -42,7 +42,10 @@
                 @Html.ValidationMessageFor(model => model.BusinessInformation.PostalCode, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <div class="col-md-12">
+            <h4>Credit card Information</h4>
+            <hr />
+        </div>
         <div class="form-group">
             @Html.LabelFor(model => model.BusinessInformation.CardType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
