--- a/SinExWebApp20256461/Views/SavedAddresses/Create.cshtml
+++ b/SinExWebApp20256461/Views/SavedAddresses/Create.cshtml
@@ -73,16 +73,32 @@
                 </div>
             </div>
         </div>
- 
-        <div id="pickup" style="display: none">
-            <div class="form-group">
-                @Html.LabelFor(model => model.PickupLocation, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.PickupLocation, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.PickupLocation, "", new { @class = "text-danger" })
-                </div>
+
+ @if (ViewBag.preloadType == "pickup")
+ {
+    <div id="pickup">
+        <div class="form-group">
+            @Html.LabelFor(model => model.PickupLocation, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.PickupLocation, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PickupLocation, "", new { @class = "text-danger" })
             </div>
         </div>
+    </div>
+ }
+ else
+ {
+    <div id="pickup" style="display: none">
+        <div class="form-group">
+            @Html.LabelFor(model => model.PickupLocation, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.PickupLocation, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PickupLocation, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+ }
+ 
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
