--- a/SinExWebApp20256461/Views/Shipments/DisplayShipment.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/DisplayShipment.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SinExWebApp20256461.ViewModels.CreateShipmentViewModel
 
 @{
-    ViewBag.Title = "Display Shipment";
+    ViewBag.Title = "Waybill";
 }
 
-<h2>Display Shipment</h2>
+<h2>Waybill</h2>
 
 @using (Html.BeginForm())
 {
@@ -14,6 +14,13 @@
         <hr />
         <h4>Shipment Information</h4>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Shipment.WaybillNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Shipment.WaybillNumber, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Shipment.ReferenceNumber, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -109,14 +116,14 @@
             <div class="form-group">
                 <div class="control-label col-md-2"><b>Estimated Cost</b></div>
                 <div class="col-md-10">
-                    @ViewBag.FeeCollection[i]
+                    @ViewBag.CurrencyCode @ViewBag.FeeCollection[i]
                 </div>
             </div>
         }
         <div class="row">
             <div class="control-label col-md-2"><b>Total Estimated Cost</b></div>
             <div class="col-md-10">
-                @ViewBag.TotalEstimatedFee
+                @ViewBag.CurrencyCode @ViewBag.TotalEstimatedFee
             </div>
         </div>
 
