--- a/SinExWebApp20256461/Views/Shipments/Index.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/Index.cshtml
@@ -49,7 +49,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Status)
         </th>
-        <th>Enter</th>
+        <th>Operation</th>
     </tr>
 
 @foreach (var item in Model)
