--- a/SinExWebApp20256461/Views/Shared/_Layout.cshtml
+++ b/SinExWebApp20256461/Views/Shared/_Layout.cshtml
@@ -52,8 +52,8 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Reports<b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li>@Html.ActionLink("Shipping History", "GenerateHistoryReport", "Shipments")</li>
-                                <li>@Html.ActionLink("Invoice History", "GenerateInvoiceReport", "Shipments")</li>
+                                <li>@Html.ActionLink("Shipping History", "GenerateHistoryReport", "Shipments", new { FirstClick = 1 }, null)</li>
+                                <li>@Html.ActionLink("Invoice History", "GenerateInvoiceReport", "Shipments", new { FirstClick = 1 }, null)</li>
                             </ul>
                         </li>
                     }
