--- a/SinExWebApp20256461/Views/SavedAddresses/Create.cshtml
+++ b/SinExWebApp20256461/Views/SavedAddresses/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SinExWebApp20256461.Models.SavedAddress
+﻿@model SinExWebApp20256461.ViewModels.SavedAddressViewModel
 
 @using (Html.BeginForm())
 {
@@ -9,10 +9,10 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.NickName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SavedAddress.NickName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.NickName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NickName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.SavedAddress.NickName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.SavedAddress.NickName, "", new { @class = "text-danger" })
             </div>
         </div>
         @if (@ViewBag.errorMessage != null)
@@ -27,49 +27,49 @@
                 Add a new address for: 
             </div>
             <div class="col-md-10">
-                Pickup @Html.RadioButtonFor(model => model.Type, "pickup", new { @class = "btn_sa" })
-                Recipient @Html.RadioButtonFor(model => model.Type, "recipient", new { @class = "btn_sa" })
+                Pickup @Html.RadioButtonFor(model => model.SavedAddress.Type, "pickup", new { @class = "btn_sa" })
+                Recipient @Html.RadioButtonFor(model => model.SavedAddress.Type, "recipient", new { @class = "btn_sa" })
             </div>
         </div>
         
         <div id="recipient" style="display: none">
             <div class="form-group">
-                @Html.LabelFor(model => model.Building, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.SavedAddress.Building, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Building, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Building, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.SavedAddress.Building, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.SavedAddress.Building, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Street, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.SavedAddress.Street, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Street, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Street, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.SavedAddress.Street, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.SavedAddress.Street, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.City, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.SavedAddress.City, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.SavedAddress.City, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.SavedAddress.City, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.ProvinceCode, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.SavedAddress.ProvinceCode, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.ProvinceCode, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.ProvinceCode, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.SavedAddress.ProvinceCode, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.SavedAddress.ProvinceCode, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.PostalCode, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.SavedAddress.PostalCode, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.PostalCode, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.PostalCode, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.SavedAddress.PostalCode, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.SavedAddress.PostalCode, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -78,10 +78,10 @@
  {
     <div id="pickup">
         <div class="form-group">
-            @Html.LabelFor(model => model.PickupLocation, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SavedAddress.PickupLocation, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PickupLocation, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PickupLocation, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.SavedAddress.PickupLocation, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.SavedAddress.PickupLocation, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
@@ -90,10 +90,10 @@
  {
     <div id="pickup" style="display: none">
         <div class="form-group">
-            @Html.LabelFor(model => model.PickupLocation, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SavedAddress.PickupLocation, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PickupLocation, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PickupLocation, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.SavedAddress.PickupLocation, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.SavedAddress.PickupLocation, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
@@ -106,6 +106,17 @@
             </div>
         </div>
     </div>
+   
+    @Html.HiddenFor(model =>model.WaybillId)
+
+    if (ViewBag.preloadType == "pickup")
+    {
+        <div class="form-group">
+            <button type="submit" name="type_post" value="CreateAndReturnToPickup" class="btn btn-primary">Create And Return To Pickup</button>
+        </div>
+
+    }
+
 
 <div>
     @Html.ActionLink("Back to List", "Index")
