solved empty entry in nickname for savedAddress

--- a/SinExWebApp20256461/Views/SavedAddresses/Index.cshtml
+++ b/SinExWebApp20256461/Views/SavedAddresses/Index.cshtml
@@ -103,3 +103,5 @@
         }
     }
 </table>
+
+@Html.ActionLink("Return to the pickup", "Create", "Pickups", new { waybillId = ViewBag.WaybillId }, new { @class = "btn btn-primary btn-large" })
