--- a/SinExWebApp20256461/Views/SavedAddresses/Create.cshtml
+++ b/SinExWebApp20256461/Views/SavedAddresses/Create.cshtml
@@ -6,6 +6,8 @@
 
     <div class="form-horizontal">
         <h4>SavedAddress</h4>
+
+
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -108,8 +110,9 @@
     </div>
    
     @Html.HiddenFor(model =>model.WaybillId)
+    @Html.HiddenFor(model => model.PageJumpType)
 
-    if (ViewBag.preloadType == "pickup")
+    if (Model.PageJumpType == "pickup")
     {
         <div class="form-group">
             <button type="submit" name="type_post" value="CreateAndReturnToPickup" class="btn btn-primary">Create And Return To Pickup</button>
