--- a/SinExWebApp20256461/Views/SavedAddresses/Index.cshtml
+++ b/SinExWebApp20256461/Views/SavedAddresses/Index.cshtml
@@ -104,4 +104,7 @@
     }
 </table>
 
+@if (ViewBag.WaybillId != null)
+{
 @Html.ActionLink("Return to the pickup", "Create", "Pickups", new { waybillId = ViewBag.WaybillId }, new { @class = "btn btn-primary btn-large" })
+}
