--- a/SinExWebApp20256461/Views/Account/Register.cshtml
+++ b/SinExWebApp20256461/Views/Account/Register.cshtml
@@ -9,7 +9,7 @@
 @if (@ViewBag.errorMessage != null)
 {
     <div class="col-lg-offset-3">
-        <p style="color: indianred">@ViewBag.errorMessage</p>
+        <p style="color: indianred">* @ViewBag.errorMessage</p>
     </div>
 }
 
