added data annotations

--- a/SinExWebApp20256461/Views/Shared/_Layout.cshtml
+++ b/SinExWebApp20256461/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Typical Student (20256461)</p>
+            <p>&copy; @DateTime.Now.Year - Sino Express</p>
         </footer>
     </div>
 
