--- a/SinExWebApp20256461/Views/PenaltyFees/Edit.cshtml
+++ b/SinExWebApp20256461/Views/PenaltyFees/Edit.cshtml
@@ -17,7 +17,7 @@
         @Html.AntiForgeryToken()
         
         <div class="form-horizontal">
-            <h4>PenaltyFee</h4>
+            <h2>Change Penalty Fee</h2>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.PenaltyFeeID)
@@ -38,8 +38,8 @@
         </div>
     }
     
-    <div>
+    @*<div>
         @Html.ActionLink("Back to List", "Index")
-    </div>
+    </div>*@
 </body>
 </html>
