--- a/SinExWebApp20256461/Views/Shipments/DisplayShipment.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/DisplayShipment.cshtml
@@ -267,7 +267,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        @Html.LabelFor(model => model.ShipmentAuthorizationCode, "Authorization Code", htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.ShipmentAuthorizationCode, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.ShipmentAuthorizationCode, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                         </div>
