--- a/SinExWebApp20256461/Views/Shipments/DisplayShipment.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/DisplayShipment.cshtml
@@ -16,6 +16,13 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Shipment.ShippingAccount.ShippingAccountNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Shipment.ShippingAccount.ShippingAccountNumber, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Shipment.WaybillNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Shipment.WaybillNumber, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
