--- a/SinExWebApp20256461/Views/PenaltyFees/Edit.cshtml
+++ b/SinExWebApp20256461/Views/PenaltyFees/Edit.cshtml
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width" />
     <title>Edit</title>
 </head>
+
+@{
+    ViewBag.Title = "Penalty Fee";
+}
+
 <body>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
