--- a/SinExWebApp20256461/Views/ServicePackageFees/Index.cshtml
+++ b/SinExWebApp20256461/Views/ServicePackageFees/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<SinExWebApp20256461.Models.ServicePackageFee>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Fees";
 }
 
 <h2>Service/Package Fees</h2>
