--- a/SinExWebApp20256461/Views/ServiceTypes/Index.cshtml
+++ b/SinExWebApp20256461/Views/ServiceTypes/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<SinExWebApp20256461.Models.ServiceType>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Service Types";
 }
 
 <h2>Service Types</h2>
