--- a/SinExWebApp20256461/Views/Shipments/Create.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/Create.cshtml
@@ -36,8 +36,8 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Shipment.Destination, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Shipment.Destination, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="col-md-6">
+                @Html.DropDownListFor(model => model.Shipment.Destination, new SelectList(ViewBag.Cities), new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Shipment.Destination, "", new { @class = "text-danger" })
             </div>
         </div>
