--- a/SinExWebApp20256461/Views/PersonalShippingAccounts/Edit.cshtml
+++ b/SinExWebApp20256461/Views/PersonalShippingAccounts/Edit.cshtml
@@ -19,6 +19,10 @@
         @Html.HiddenFor(model => model.ShippingAccountNumber)
         @Html.HiddenFor(model => model.UserName)
 
+        @if(@ViewBag.errorMessage != null)
+        {
+            <p style="color:indianred">@ViewBag.errorMessage</p>
+        }
         <div class="form-group">
             @Html.LabelFor(model => model.BuildingInformation, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
