--- a/SinExWebApp20256461/Views/SavedAddresses/Edit.cshtml
+++ b/SinExWebApp20256461/Views/SavedAddresses/Edit.cshtml
@@ -13,9 +13,18 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.SavedAddressID)
-        @Html.HiddenFor(model => model.NickName)
 
-        <h4>Nickname: @(Model.NickName)</h4>
+        @if(@ViewBag.errorMessage != null)
+        {
+            <p class="col-md-offset-2" style="color: indianred">@ViewBag.errorMessage</p>
+        }
+        <div class="form-group">
+            @Html.LabelFor(model => model.NickName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.NickName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NickName, "", new { @class = "text-danger" })
+            </div>
+        </div>
         @if (Model.Type == "recipient")
         {
             <div class="form-group">
