--- a/SinExWebApp20256461/Views/Shipments/EditCustomer.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/EditCustomer.cshtml
@@ -5,7 +5,6 @@
 }
 
 <h2>Edit Shipment</h2>
-
 @using (Html.BeginForm("EditCustomer","Shipments"))
 {
     @Html.AntiForgeryToken()
@@ -295,3 +294,13 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+<script src="/Scripts/jquery-1.10.2.js"></script>
+<script src="/Scripts/customs.js"></script>
+<script>
+    show_div("@Model.ShipmentPayer");
+    show_div("@Model.TaxPayer");
+    if(@Model.RecipientShippingAccountNumber != ""){
+        document.getElementById("append").style.display = 'block';
+    }
+</script>
