changed input box default value

--- a/SinExWebApp20256461/Views/Pickups/Create.cshtml
+++ b/SinExWebApp20256461/Views/Pickups/Create.cshtml
@@ -70,7 +70,7 @@
         {
         <h5>Different:Or you can directly input a Pickup Location below:</h5>
         <h6>Format:Building/Street/City/Province</h6>
-        @Html.TextBoxFor(model => model.Pickup.Location, htmlAttributes: new { @Value = "e.g. Flat A 20/F Tower A Galaxia, 275 Fung Tak Road, Hong Kong, HK", @class = "form-control" })
+        @Html.TextBoxFor(model => model.Pickup.Location, htmlAttributes: new { placeholder = "e.g. Flat A 20/F Tower A Galaxia, 275 Fung Tak Road, Hong Kong, HK", @class = "form-control" })
         }
             </div>
 
